c/examples/writing-a-c-compiler-tests/tests/chapter_2/valid/redundant_parens.c
int main(void)
{
    return -((((10))));
}