c/examples/writing-a-c-compiler-tests/tests/chapter_2/invalid_parse/missing_semicolon.c
int main(void) {
    return -5
}